ChangeLog for package moot

Todo:
   + write perl-XS interface & utilities

v2.0.6 Fri, 24 Apr 2009 11:04:05 +0200
        + added mootToken::Location (token.tok_location) nested class for input stream back-tracing
	  - pass-through now working in mootPPLexer, mootpp, Token(Reader|Writer)(Native|Expat)
	  - otherwise implicitly set by TokenReader(Native|Expat) if pass-through format flag tiofLocation is unset
	+ added byte_number() methods to TokenReaderNative
	+ fixed double line-counting bug in mootTokenLexer.ll in presence of tags
	+ added byte-counting code to mootTokenLexer.ll (the template really ought to do this for us)
	+ fixed vprintf() bug in mootCxxIO.h, mootBufferIO.h causing garbage out
	  on first printf() call (va_list was being incremented by vsnprintf() but not backed up)
	  - solution uses macro moot_va_copy(), lifted from glibc docs: use __va_copy if present,
	    otherwise simple assignment
	+ basic tests (incl. binary models) on x86_64 (lal.bbaw.de): looks good
	+ changed printf format from "%d" to "%zd" for size_t args
	  - complies with ISO C99, according to GNU libc docs
	+ fixed buglet in deleted interpolation sanity checks in mootHMM.cc
	  method estimate_lambdas()
        + fixed mootConfig.h to allow "safe" inclusion from header files
	  - autoheader file is now "mootAutoConfig.h"
	  - fixes segfaults in ~mootHMM() when <mootConfig.h> was not included
	    (due to conditionally defined fields of mootHMM)
	+ build system updated to build more cleanly on non-development systems
	  - i.e. missing Getopt::Gen, pod2x, flex++, bison++, etc.
	+ fixed mootSTLHacks.h to correctly recognize g++-v4.0.x
	  - due to an oversight, g++-v4.0.x was being recognized
	    as g++ v3.0.x (STL namespace 'std') and not g++ >v3.0.x
	    (STL namespace '__gnu_cxx').
	  - thanks to Norman Rosner for identifying the bug & its cause
	+ changed default flex++ buffer size to 16k; jives with flex++ defaults
	  - flex++ buffer usage & re-allocation needs an overhaul