@@ -1,3 +1,4 @@
 #!/bin/sh
 
-exec autoreconf --install --symlink --force --verbose
+#exec autoreconf --install --symlink --force --verbose
+exec autoreconf --install --symlink --verbose
