@@ -4,6 +4,8 @@ Todo:
    + write perl-XS interface & utilities
 
 v2.0.6 Fri, 24 Apr 2009 11:04:05 +0200
+	+ 'relax' mode is now default
+	+ added checking for system 'osfcn.h' (flex++/bison++ hack)
         + added mootToken::Location (token.tok_location) nested class for input stream back-tracing
 	  - pass-through now working in mootPPLexer, mootpp, Token(Reader|Writer)(Native|Expat)
 	  - otherwise implicitly set by TokenReader(Native|Expat) if pass-through format flag tiofLocation is unset
